<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlayPhone</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="enter_info">Enter Info Below:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="ok">Ok</string>

</resources>
